--- a/Phase II/style.css
+++ b/Phase II/style.css
@@ -19,8 +19,7 @@ body {
   font-family: "Poppins", sans-serif;
   overflow-x: hidden;
   background-color: #f8f9fa;
-  height: 100vh;
-  /* overflow-y: hidden; */
+  min-height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -36,9 +35,7 @@ ul {
   list-style: none;
 }
 
-.bx-bg-shadow, .admin-user, .sales-total, .order-total, .product-total, 
-.day-month-container, .year-sales, .order, .add-product .container 
-{
+.bx-bg-shadow, main .admin-user, main .info-container .sales-total, main .info-container .order-total, main .info-container .product-total, main .statistics-container .statistics .day-month-container, main .statistics-container .statistics .year-sales, main .order, main .add-product .container {
   background-color: #fff;
   -webkit-box-shadow: 0 0.1rem 0.25rem #a7a5a5;
           box-shadow: 0 0.1rem 0.25rem #a7a5a5;
@@ -51,7 +48,7 @@ ul {
           box-shadow: 0.2rem 0.2rem var(--main-color-light), -0.2rem -0.2rem #ccc;
 }
 
-.bx-bg-shadow:hover {
+.bx-bg-shadow:hover, main .admin-user:hover, main .info-container .sales-total:hover, main .info-container .order-total:hover, main .info-container .product-total:hover, main .statistics-container .statistics .day-month-container:hover, main .statistics-container .statistics .year-sales:hover, main .order:hover, main .add-product .container:hover {
   border: none;
   -webkit-box-shadow: 0.2rem 0.2rem #f7444e, -0.2rem -0.2rem #ccc;
           box-shadow: 0.2rem 0.2rem #f7444e, -0.2rem -0.2rem #ccc;
@@ -114,7 +111,6 @@ nav {
           flex-direction: column;
   -webkit-transition: width 0.5s ease-in-out;
   transition: width 0.5s ease-in-out;
-  overflow-x: hidden;
 }
 
 nav .sidebar-top {
@@ -325,8 +321,7 @@ main .copyright span {
   cursor: pointer;
 }
 
-.btn, .dash-header a, .product-header a, .add-product a 
-{
+.btn, main .dashboard-container .dash-header a, main .pr-list-container .product-header a, main .add-product a {
   background: #3498db;
   font-family: Arial;
   color: #ffffff;
@@ -337,8 +332,7 @@ main .copyright span {
   height: 40px;
 }
 
-.btn:hover, .dash-header a:hover, .product-header a:hover, .add-product a:hover 
-{
+.btn:hover, main .dashboard-container .dash-header a:hover, main .pr-list-container .product-header a:hover, main .add-product a:hover {
   background: #3cb0fd;
   cursor: pointer;
 }
@@ -365,7 +359,7 @@ main .copyright span {
           box-shadow: 0.1rem 0.1rem var(--main-color-light), -0.1rem -0.1rem #ccc;
 }
 
-.header-card, .dash-header, .product-header, .add-product-header {
+.header-card, main .dashboard-container .dash-header, main .pr-list-container .product-header, main .add-product .add-product-header {
   margin-top: 70px;
   width: 100%;
   display: -webkit-box;
@@ -456,7 +450,7 @@ main .info-container {
           justify-content: space-between;
 }
 
-.sales-total, .order-total, .product-total {
+main .info-container .sales-total, main .info-container .order-total, main .info-container .product-total {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -464,12 +458,12 @@ main .info-container {
   width: 32%;
 }
 
-.sales-total img, .order-total img, .product-total img {
+main .info-container .sales-total img, main .info-container .order-total img, main .info-container .product-total img {
   width: 50px;
   margin-right: 20px;
 }
 
-.sales-total small, .order-total small, .product-total small {
+main .info-container .sales-total small, main .info-container .order-total small, main .info-container .product-total small {
   display: block;
 }
 
@@ -494,21 +488,21 @@ main .statistics-container .statistics .day-month-container {
   width: 66%;
 }
 
-.daily-sales {
+main .statistics-container .statistics .day-month-container .daily-sales {
   width: 50%;
   color: black;
 }
 
-.monthly-sales {
+main .statistics-container .statistics .day-month-container .monthly-sales {
   margin-left: 20px;
   width: 50%;
 }
 
-.daily-sales, .monthly-sales, .year-sales {
+main .statistics-container .statistics .daily-sales, main .statistics-container .statistics .monthly-sales, main .statistics-container .statistics .year-sales {
   padding: 20px;
 }
 
-.year-sales {
+main .statistics-container .statistics .year-sales {
   margin-left: 20px;
   width: 32%;
   background-color: white;
@@ -517,12 +511,10 @@ main .statistics-container .statistics .day-month-container {
 
 main .order {
   padding: 10px;
-  margin-top: 100px;
-  /* display: none; */
-}
-main .product {
   margin-top: 20px;
+  display: none;
 }
+
 main .order .search-order {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -597,7 +589,7 @@ main .order .order-table .table-header {
 }
 
 main .pr-list-container {
-  display: none !important;
+  display: none;
 }
 
 main .pr-list-container .order-table ul div {
@@ -757,8 +749,7 @@ main .add-product .publish {
             flex-direction: column;
     width: 100%;
   }
-  main .statistics-container .statistics .day-month-container, 
-  main .statistics-container .statistics .year-sales {
+  main .statistics-container .statistics .day-month-container, main .statistics-container .statistics .year-sales {
     width: 100%;
     margin-left: 0;
   }
@@ -770,8 +761,7 @@ main .add-product .publish {
     padding: 0;
     margin-bottom: 20px;
   }
-  main .statistics-container .statistics .day-month-container .monthly-sales, 
-  main .statistics-container .statistics .day-month-container .daily-sales {
+  main .statistics-container .statistics .day-month-container .monthly-sales, main .statistics-container .statistics .day-month-container .daily-sales {
     margin-left: 0;
     width: 100%;
   }
@@ -796,7 +786,7 @@ main .add-product .publish {
     width: 50%;
   }
 }
-/*# sourceMappingURL=index.css.map */
+
 .shrink nav {
   width: 5.4rem;
 }
@@ -816,5 +806,4 @@ main .add-product .publish {
 .shrink .sidebar-links h4 {
   height: 10px;
 }
-
 /*# sourceMappingURL=style.css.map */
