--- a/Phase II/styles/header.css
+++ b/Phase II/styles/header.css
@@ -10,7 +10,7 @@ header {
   
   .menu {
     display: none;
-    /* background-color: black; */
+    background-color: black;
     font-size: 2.2rem;
     cursor: pointer;
   }
