--- a/Phase II/styles/cart.css
+++ b/Phase II/styles/cart.css
@@ -1,11 +1,9 @@
 .cart {
-    margin-top:0;
-    /* position: relative; */
-    height: 150vh;
-    /* display:flex; */
-
-    
-
+    margin-bottom: 50px;
+    display: none;
+    box-shadow: 0 0.1rem 0.25rem rgb(167, 165, 165);
+    width: 90%;
+    margin: 0 auto;
 }
 
 .cart h1 {
@@ -18,7 +16,7 @@
     display: flex;
     gap: 8px;
     flex-direction: column;
-    background-color: azure;
+    /* background-color: azure; */
 
 }
 #cart-btn {
@@ -41,7 +39,10 @@
     justify-content: space-around;
 }
 .cart-delete {
-    font-size: 10px;
+    font-size: 2rem;
+}
+.cart-delete:hover {
+  cursor: pointer;
 }
 .total-item {
     width: 30%;
