--- a/Phase II/styles/home.css
+++ b/Phase II/styles/home.css
@@ -246,7 +246,7 @@ main {
 }
 .banner {
   width: 100%;
-  background-image: url("../images/Project_182-04_generated.jpg");
+  background-image: url("../HomePage/images/Project_182-04_generated.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   height: 30rem;
@@ -273,6 +273,7 @@ main {
 	height: 180px;
   overflow: hidden;
 }
+
 .product-list-top .product-img{
  width: 50px;
  height: 50px;
@@ -667,4 +668,208 @@ footer {
 		margin: 0 10px 0 0;
 	}
 
+  form h1 {
+    display: none;
+  }
+
+}
+a {
+  color:darkslateblue;
+}
+a:hover {
+  cursor: pointer;
+  color: #099;
+}
+.cart-wrapper {
+    display: none;
+    position: relative;
+    width: 50%;
+    /* display: flex; */
+    margin: 0 auto;
+    padding: 20px;
+    box-shadow: 0 0.1rem 0.25rem rgb(167, 165, 165);
+    z-index: 9999;
+    transition: ease-in-out 0.3s;
+    margin-top: 10px;
+    /* transform: translateY(20%); */
+}
+
+.container,
+form {
+    width: 100%;
+}
+
+form input {
+    width: 100%;
+    min-height: 25px;
+    border: 0;
+    font-size: 1rem;
+    letter-spacing: .15rem;
+    font-family: "Arimo";
+    margin-top: 5px;
+    color: #8e2807;
+    border-radius: 4px;
+    background-color: #EEEDDE;
+}
+
+form label {
+    text-transform: uppercase;
+    font-size: 12px;
+    letter-spacing: 2px;
+    color: #8e2807;
+}
+
+form h1 {
+    font-size: 24px;
+    line-height: 10px;
+    color: #493b76;
+    letter-spacing: 1px;
+}
+
+form h1:nth-of-type(2) {
+    margin-top: 10%;
+}
+
+.name {
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+}
+
+.name div {
+    width: 45%;
+}
+
+.address-info {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+}
+
+.address-info div {
+    width: 30%;
+}
+
+.cc-info {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+}
+
+.cc-info div {
+    width: 45%;
+}
+
+.btns {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: end;
+    -ms-flex-align: end;
+    align-items: flex-end;
+    margin-top: 10px;
+}
+
+.btns button {
+    margin: 3px 0;
+    height: 30px;
+    width: 40%;
+    color: #cfc9e1;
+    background-color: #4a3b76;
+    text-transform: uppercase;
+    border: 0;
+    border-radius: .3rem;
+    letter-spacing: 2px;
+}
+
+.btns button:hover {
+    -webkit-animation-name: btn-hov;
+    animation-name: btn-hov;
+    -webkit-animation-duration: 550ms;
+    animation-duration: 550ms;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+    cursor: pointer;
+}
+
+input:focus,
+button:focus {
+    outline: none;
+}
+
+@media (max-width: 736px) {
+    .wrapper {
+        width: 100%;
+    }
+
+    .container {
+        width: 100%;
+    }
+
+    .btns {
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+    }
+
+    .btns button {
+        width: 50%;
+    }
+
+    form h1 {
+        text-align: center;
+    }
+
+    .name,
+    .address-info,
+    .cc-info {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        width: 100%;
+        -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+        justify-content: space-between;
+    }
+
+    .name div,
+    .address-info div,
+    .cc-info div {
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        width: 100%;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+    }
+
+    .street,
+    .cc-num {
+        text-align: center;
+    }
+
+    input {
+        margin: 5px 0;
+        min-height: 30px;
+    }
 }
