Updated MVC structure
Model View Controller update

--- a/styles/home.css
+++ b/styles/home.css
@@ -224,7 +224,7 @@ main {
 }
 .banner {
   width: 100%;
-  background-image: url("../../HomePage/images/Project_182-04_generated.jpg");
+  background-image: url("../Pages/HomePage/images/Project_182-04_generated.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   height: 30rem;
